hydroflow/tests/compile-fail/surface_degenerate_null.stderr
error: proc macro panicked
 --> tests/compile-fail/surface_degenerate_null.rs:5:18
  |
5 |       let mut df = hydroflow_syntax! {
  |  __________________^
6 | |         null();
7 | |     };
  | |_____^
  |
  = help: message: assertion failed: `(left == right)`
            left: `1`,
           right: `0`: If entire subgraph is pull, should have only one handoff output. Do you have a loose `null()` or other degenerate pipeline somewhere?
